# work-in-autonomous-driving

./: README.md
control/: README.md  package.xml  setup.cfg  setup.py
control/adapt_latlongcon/: path_tracking.py
control/launch/: latlong_launch.py
control/test/: dummy_pub.py  latlong_test.py
environment_model/: README.md  package.xml  setup.cfg  setup.py
environment_model/adapt_envmod/: env.py  visualization.py
environment_model/launch/: env_launch.py
environment_model/resource/: adapt_map.pgm  adapt_map.yaml
environment_model/rosbag/alltopics/: metadata.yaml  rosbag2_2024_06_18-16_05_12_0.db3
environment_model/rosbag/locpose/: metadata.yaml  rosbag2_2024_06_17-20_28_26_0.db3
environment_model/test/: env_integrationtest.py  env_test.py  visualization_test.py
localisation/: README.md  package.xml  setup.cfg  setup.py
localisation/adapt_loc/: localization.py
localisation/launch/: loc_launch.py
localisation/test/: test_integration.py  test_localization.py
main_project/: # Architecture v3.0.txt  README.md  adapt_repos.repo
main_project/launch/: adapt_launch.py  backend_components.py  infra_launch.py
messages/: CMakeLists.txt  README.md  package.xml
messages/msg/: CarCom.msg  LaneInfo.msg  LiveTrack.msg  VehData.msg
object_detection/: README.md  model_hyprprmtr  package.xml  setup.cfg  setup.py
route_computer/: README.md  package.xml  setup.cfg  setup.py
route_computer/adapt_roucomp/: route_cardinal.py  routemodule5.py
route_computer/config/: map.txt  map_cardinal.txt  map_plot.py
route_computer/launch/: roucomp_launch.py
route_computer/test/: integration_test.py  integration_test_cardinal.py  unit_test.py  unit_test_cardinal.py
trajectory/: README.md  package.xml  setup.cfg  setup.py
trajectory/adapt_trajp/: dummy_path.py  dummy_state.py  trajectory_planner.py
trajectory/test/: trajectory_planner_test.py
transceiver/: README.md  dummy_data  package.xml  setup.cfg  setup.py
transceiver/adapt_transceiver/: CPM.py  object_classes.txt  transceiver.py
transceiver/launch/: transmitter_launch.py
(+786 files in other folders)
